fixed image distortion and refresh interval

--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,14 @@ body {
     border:none;
     margin:0;
     padding:0;
-    overflow:hidden;
+    background-position: center;
+    background-size: cover;
 }
-
 #social {
     position:absolute;
     bottom:5px;
     right:5px;
 }
-
 #main-frame {
     color:#000000;
     background-color: #000;
